css/style.css
@charset "UTF-8";

/* CSS Document */

/*------------------------------------------------------------------

Template Name:      Glass Repair Template
Version:            1.0.0
Created Date:       8/1/2017 
Author: EaseTemplate
Author URL: https://easetemplate.com/               
License: Creative Commons Attribution 3.0 Unported
License URL: http://creativecommons.org/licenses/by/3.0/

------------------------------------------------------------------
[CSS Table of contents]

1.  Body / Typography 
2.  Form Elements
3.  Buttons
4.  General / Elements
       4.1 Section space
       4.2 Margin space
       4.3 Padding space
       4.4 Background color
       4.5 Features
       4.7 Call to actions
       4.8 Img hover effect
       4.9 Icon
       -----------------------
5. Header / Navigations
       5.1 Header Regular
       5.2 Header Transparent
       5.3 Navigation Regular
       5.4 Page Header

       -----------------------
6. Slider
       6.1 Slider
       -----------------------
7. Content
8. Footers
9. Coaching Services

   9.1  Service 
   9.2  Service Single
   ------------------------------------

10.Pages

   10.1  About
   10.2  Client Reviews
   10.3  Contact us
   10.4  FAQ
   10.5  404 error
   10.6  Appointment Form
   10.7  StyleGuide
   10.8  Coupen Offer 

   ------------------------------------
11.Blog
   10.1 Blog Default
   10.2 Blog Single
   ------------------------------------
   
12.Sidebar
   11.1 Widget
   ------------------------------------

13. Media Queries

------------------------------------------------------------------*/

/*----------------------------------
    1. Body / Typography
----------------------------------*/

body { -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; font-family: 'Poppins', sans-serif; letter-spacing: 0px; font-size: 16px; color: #777b80; font-weight: 400; line-height: 1.8; }
h1, h2, h3, h4, h5, h6 { letter-spacing: 0px; font-weight: 500; color: #2e3133; margin: 0px 0px 15px 0px; font-family: 'Poppins', sans-serif; }
h1 { font-size: 40px; line-height: 45px; }
h2 { font-size: 32px; line-height: 37px; }
h3 { font-size: 24px; line-height: 30px; }
h4 { font-size: 22px; line-height: 32px; }
h5 { font-size: 16px; line-height: 20px; }
h6 { font-size: 14px; line-height: 18px; }
p { margin: 0 0 20px; line-height: 1.7; }
p:last-child { margin: 0px; }
ul, ol { list-style: none; margin: 0; padding: 0; }
a { text-decoration: none; color: #777b80; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; transition: all 0.3s; }
a:focus, a:hover { text-decoration: none; color: #023981; }
sub { bottom: 0em; }
.lead { font-size: 21px; font-weight: 400; line-height: 1.6; font-family: 'Poppins', sans-serif; color: #2e3133; margin-bottom: 20px; }
.firstcharacter { float: left; font-size: 95px; line-height: 60px; padding-top: 16px; padding-right: 8px; padding-left: 0px; color: #2e3133; }
blockquote { padding: 30px 40px; margin: 0 0 30px; font-size: 16px; border-left: 5px solid #304496; background-color: #efeff2; font-weight: 400; color: #2e3133; font-style: italic; line-height: 26px; }
.blockquote-reverse, blockquote.pull-right { border-right: 5px solid #304496; padding: 30px; }
.qoute-icon { }
.blockquote-content { }
.blockquote-text { font-family: 'Poppins', sans-serif; color: #525756; font-weight: 400; font-size: 23px; line-height: 1.6; }
strong { color: #2e3133; font-weight: 500; }
hr { border-top: 1px solid #e3e6e9; margin-bottom: 40px; margin-top: 40px; }

/*-----------------------
    2 Form Elements:
-------------------------*/
label { }
.control-label { font-size: 14px; text-transform: capitalize; color: #2e3133; margin-bottom: 8px; letter-spacing: 0px; font-weight: 500; }
.form-control:focus { }
.textarea.form-control { }
.required { }
.form-group { margin-bottom: 5px; }
.hero-section .form-control { border: 1px solid #8c897d; height: 58px; }
.form-control { border-radius: 0px; font-size: 14px; font-weight: 500; width: 100%; height: 55px; padding: 14px 18px; line-height: 1.42857143; border: 1px solid #e0e5e9; background-color: #fff; text-transform: uppercase; letter-spacing: 0px; margin-bottom: 16px; -webkit-box-shadow: inset 0 0px 0px rgba(0, 0, 0, .075); box-shadow: inset 0 0px 0px rgba(0, 0, 0, .075); -webkit-appearance: none; }
.form-control:focus { color: #2e3133 !important; outline: 0; -webkit-box-shadow: none; box-shadow: none; border-color: #c0c5ca; font-size: 14px; }
.input-group { position: relative; display: table; border-collapse: separate; }
input[type=checkbox], input[type=radio] { margin: 8px 0 0; margin-top: 9px; line-height: normal; }
form input::-webkit-input-placeholder { color: #2e3133 !important; }
textarea::-webkit-input-placeholder { color: #2e3133 !important; }
.input-group-addon { background-color: transparent; border: 1px solid #0e142e; border-radius: 0px; }
.focus { border: 1px solid #e0e5e9; }
.focus:focus { border: 1px solid #023981; }
.has-success .form-control { border-color: #3c763d; background-color: transparent; box-shadow: none; }
.has-success .form-control:focus { border-color: #3c763d; outline: 0; -webkit-box-shadow: none; box-shadow: none; }
.has-error .form-control { border-color: #a94442; background-color: transparent; box-shadow: none; }
.has-error .form-control:focus { border-color: #34b2a4; outline: 0; -webkit-box-shadow: none; box-shadow: none; }
.input-group-addon:last-child { border-left: 0; border-right: transparent; border-top: transparent; }
.input-group-addon i { color: #0e142e; }
.btn-select { font-size: 14px; }
select option { margin: 40px; background: rgba(255, 255, 255, 1); color: #7a7f94; text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4); position: relative; }
select.form-control { position: relative; }
/* ... */

